sumo/tests/marouter/errors/incomplete_connections/from_missing2of2/errors.marouter
Error: District '2' has no source.
Error: Loading failed.
Quitting (on error).
